# autodj

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT.md  README.md  clippy.toml  grcov.sh  rust-cov.sh  rust-toolchain.toml
.github/workflows/: pages.yml  release-plz.yml  release-pr.yml  release.yml  rust-clippy.yml  rust.yml
examples/: ideal_gas.rs  pendulum.rs  pendulum_sparse.rs
src/: array.rs  common.rs  fluid.rs  lib.rs  multi.rs  num_traits.rs  prelude.rs  single.rs  solid.rs  vector.rs
src/solid/: array.rs  single.rs  sparse.rs  vector.rs
src/solid/sparse/: uuid.rs
src_old/array/: interop.rs
tests/: autodiff.rs  design.rs  test.rs  tests.rs
utils/git/hooks/: init.py  pre-commit
