[package]
name = "autodj"
version = "0.4.4"

description = "Automatic Differentiation Library"
authors = [
    "Maksim Elizarev <maxim.elizarev.research@gmail.com>",
    "https://djmaxus.github.io/",
]
categories = ["mathematics", "science", "simulation"]
keywords = ["automatic", "derivative", "jacobian", "dual-number", "comp-math"]
repository = "https://github.com/djmaxus/autodj"

edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default  = ["uuid"]
uuid     = ["dep:uuid"]

[dependencies]
num-traits = ">=0"
# auto_ops = ">=0"

[dependencies.uuid]
version = "1.4.1"
features = ["v4"]
optional = true

[dev-dependencies]
autodiff = ">=0"
nalgebra = ">=0"

# [package.metadata.docs.rs]
# cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
## trying to include examples in docs.rs page
# [[example]]
# name = "ideal_gas"
# crate-type = ["bin"]
# doc = true
# rustdoc-args = ["--scrape-examples"]
# [package.metadata.docs.rs.examples]
# "ideal_gas" = { path = "examples/ideal_gas.rs" }
