[package]
name = "autodj"
version = "0.5.0"

description = "Automatic Differentiation Library"
authors = [
    "Maksim Elizarev <maxim.elizarev.research@gmail.com>",
    "https://djmaxus.github.io/",
]
categories = ["mathematics", "science", "simulation"]
keywords = ["automatic", "derivative", "jacobian", "dual-number", "comp-math"]
repository = "https://github.com/djmaxus/autodj"

edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default  = ["uuid"]
uuid     = ["dep:uuid"]

[dependencies]
num-traits = "0.2.18"

[dependencies.uuid]
version = "1.7.0"
features = ["v4"]
optional = true

[dev-dependencies]
autodiff = "0.7.0"
nalgebra = "0.32.4"

# [dependencies]
# auto_ops = ">=0"

## trying to include examples in docs.rs page
# [package.metadata.docs.rs]
# cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
# [[example]]
# name = "ideal_gas"
# crate-type = ["bin"]
# doc = true
# rustdoc-args = ["--scrape-examples"]
# [package.metadata.docs.rs.examples]
# "ideal_gas" = { path = "examples/ideal_gas.rs" }
