[package]
name = "autodj"
version = "0.5.2"

description = "Automatic Differentiation Library"
authors = [
    "Maksim Elizarev <maxim.elizarev.research@gmail.com>",
    "https://djmaxus.github.io/",
]
categories = ["mathematics", "science", "simulation"]
keywords = ["automatic", "derivative", "jacobian", "dual-number", "comp-math"]
repository = "https://github.com/djmaxus/autodj"

edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["uuid"]
uuid = ["dep:uuid"]

[dependencies]
num-traits = "0.2.18"

[dependencies.uuid]
version = "1.7.0"
features = ["v4"]
optional = true

[dev-dependencies]
autodiff = "0.7.0"
nalgebra = "0.32.4"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
private_interfaces = "warn"
private_bounds = "warn"
pub_use_of_private_extern_crate = "warn"
exported_private_dependencies = "warn"
unused = "warn"
unused_results = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = "warn"
suspicious = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
type_repetition_in_bounds = "warn"
allow_attributes_without_reason = "warn"
as_conversions = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
default_numeric_fallback = "warn"
exhaustive_enums = "warn"
expect_used = "warn"
float_cmp_const = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
lossy_float_literal = "warn"
missing_docs_in_private_items = "warn"
redundant_pub_crate = "warn"
cargo = "warn"
disallowed_methods = "warn"
unwrap_used = "warn"
fallible_impl_from = "warn"
get_unwrap = "warn"
map_unwrap_or = "warn"
unnecessary_safety_comment = "warn"
unwrap_in_result = "warn"
cast_lossless = "warn"
indexing_slicing = "warn"
trivially_copy_pass_by_ref = "warn"

[lints.rustdoc]
private_doc_tests = "warn"
private_intra_doc_links = "warn"
all = "warn"
missing_crate_level_docs = "warn"

# [dependencies]
# auto_ops = ">=0"

## trying to include examples in docs.rs page
# [package.metadata.docs.rs]
# cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]
# [[example]]
# name = "ideal_gas"
# crate-type = ["bin"]
# doc = true
# rustdoc-args = ["--scrape-examples"]
# [package.metadata.docs.rs.examples]
# "ideal_gas" = { path = "examples/ideal_gas.rs" }
